--- a/sb-salesmanagement/build.gradle
+++ b/sb-salesmanagement/build.gradle
@@ -21,12 +21,16 @@ dependencies {
   implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
   runtimeOnly 'org.hibernate.validator:hibernate-validator:6.0.17.Final'
   runtimeOnly 'org.glassfish:javax.el:3.0.1-b11'
+  compile 'org.webjars:jquery:3.5.1'
+  compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
   compileOnly 'org.projectlombok:lombok:1.16.4'
   runtimeOnly 'org.springframework.boot:spring-boot-devtools'
   runtimeOnly 'mysql:mysql-connector-java'
   providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+ext['thymeleaf.version'] = '3.0.11.RELEASE'
 
 test {
   useJUnitPlatform()
