--- a/sb-salesmanagement/build.gradle
+++ b/sb-salesmanagement/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  //implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'javax.validation:validation-api:2.0.1.Final'
   implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
   runtimeOnly 'org.hibernate.validator:hibernate-validator:6.0.17.Final'
@@ -31,6 +32,7 @@ dependencies {
 }
 
 ext['thymeleaf.version'] = '3.0.11.RELEASE'
+//ext['spring-security.version']='5.3.2.RELEASE'
 
 test {
   useJUnitPlatform()
