--- a/sb-salesmanagement/build.gradle
+++ b/sb-salesmanagement/build.gradle
@@ -17,6 +17,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+  implementation 'org.thymeleaf.extras:thymeleaf-extras-java8time:2.1.0.RELEASE'
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'javax.validation:validation-api:2.0.1.Final'
