--- a/sb-salesmanagement/build.gradle
+++ b/sb-salesmanagement/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   runtimeOnly 'org.glassfish:javax.el:3.0.1-b11'
   compile 'org.webjars:jquery:3.5.1'
   compile 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+  compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
   compileOnly 'org.projectlombok:lombok:1.16.4'
   runtimeOnly 'org.springframework.boot:spring-boot-devtools'
   runtimeOnly 'mysql:mysql-connector-java'
